--- a/src/gui/alterarFuncionario.form
+++ b/src/gui/alterarFuncionario.form
@@ -57,8 +57,8 @@
                                           </Group>
                                           <Group type="102" alignment="0" attributes="0">
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="jTextFieldSetor" alignment="0" min="-2" pref="162" max="-2" attributes="0"/>
-                                                  <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="jComboBoxSetor" alignment="0" min="-2" pref="162" max="-2" attributes="0"/>
                                               </Group>
                                               <EmptySpace max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
@@ -148,9 +148,9 @@
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jTextFieldSetor" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTextFieldFuncao" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jComboBoxTurno" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jComboBoxSetor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -232,8 +232,6 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Setor:"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="jTextFieldSetor">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
@@ -372,6 +370,27 @@
                 <StringItem index="0" value="20"/>
                 <StringItem index="1" value="40"/>
                 <StringItem index="2" value="44"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="jComboBoxSetor">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="10">
+                <StringItem index="0" value="RH"/>
+                <StringItem index="1" value="Procon"/>
+                <StringItem index="2" value="Funape"/>
+                <StringItem index="3" value="CAS"/>
+                <StringItem index="4" value="Coordena&#xe7;&#xe3;o"/>
+                <StringItem index="5" value="Compesa"/>
+                <StringItem index="6" value="SDS"/>
+                <StringItem index="7" value="Detran"/>
+                <StringItem index="8" value="Limpeza"/>
+                <StringItem index="9" value="TI"/>
               </StringArray>
             </Property>
           </Properties>
