--- a/src/gui/alterarFuncionario.form
+++ b/src/gui/alterarFuncionario.form
@@ -83,11 +83,11 @@
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jTextFieldEscala" alignment="0" max="32767" attributes="0"/>
-                                          <Group type="102" alignment="0" attributes="0">
+                                          <Group type="102" attributes="0">
                                               <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
                                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                           </Group>
+                                          <Component id="jComboBoxEscala" alignment="1" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
@@ -166,7 +166,7 @@
                       </Group>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jTextFieldDataAdmissao" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextFieldEscala" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jComboBoxEscala" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -256,8 +256,6 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Escala:"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="jTextFieldEscala">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
@@ -391,6 +389,19 @@
                 <StringItem index="7" value="Detran"/>
                 <StringItem index="8" value="Limpeza"/>
                 <StringItem index="9" value="TI"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="jComboBoxEscala">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="2">
+                <StringItem index="0" value="Seg. - Sab."/>
+                <StringItem index="1" value="Seg. - Sex."/>
               </StringArray>
             </Property>
           </Properties>
