--- a/src/gui/cadastrarFuncionario.form
+++ b/src/gui/cadastrarFuncionario.form
@@ -90,11 +90,11 @@
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jTextFieldEscala" max="32767" attributes="0"/>
                                           <Group type="102" attributes="0">
                                               <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
                                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                           </Group>
+                                          <Component id="jComboBoxEscala" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
@@ -172,9 +172,9 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jTextFieldDataAdmissao" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextFieldEscala" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jComboBoxEntrada" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jComboBoxSaida" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jComboBoxEscala" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -260,8 +260,6 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Escala:"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="jTextFieldEscala">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
@@ -395,6 +393,19 @@
                 <StringItem index="7" value="Detran"/>
                 <StringItem index="8" value="Limpeza"/>
                 <StringItem index="9" value="TI"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="jComboBoxEscala">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="2">
+                <StringItem index="0" value="Seg. - Sab."/>
+                <StringItem index="1" value="Seg. - Sex."/>
               </StringArray>
             </Property>
           </Properties>
